@@ -1,5 +1,6 @@
 = ActiveMerchant CHANGELOG
 
+* Add support for forcing test mode on Secure Pay AU gateway [cody]
 * Update Secure Pay Au to meet specs for MessageInfo elements [cody]
 * Add support for the Australian Secure Pay payment gateway [cody]
 * Allow LinkPoint cancellations for recurring billing. [yanagimoto.shin]
